need to commit new files....

--- a/OrangeHRM/test-output/old/Default suite/methods-alphabetical.html
+++ b/OrangeHRM/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ad7a2">  <td>19/10/20 13:17:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@c4039c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@30061849</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>19/10/20 13:18:09</td>   <td>27782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@c4039c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@30061849</td>   <td></td> </tr>
-<tr bgcolor="8ad7a2">  <td>19/10/20 13:17:53</td>   <td>12052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyWelcomeLabelTest()[pri:2, instance:com.qa.tests.HomePageTest@c4039c]">verifyWelcomeLabelTest</td> 
-  <td>main@30061849</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/12/29 20:43:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.clickLeaveTabTest()[pri:1, instance:com.qa.tests.LeavePageTest@653222]">clickLeaveTabTest</td> 
+  <td>main@16218088</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/12/29 20:43:59</td>   <td>4110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LeavePageTest.def()[pri:0, instance:com.qa.tests.LeavePageTest@653222]">&lt;&lt;def</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16218088</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/12/29 20:43:41</td>   <td>-13457</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LeavePageTest.setUp()[pri:0, instance:com.qa.tests.LeavePageTest@653222]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16218088</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/12/29 20:43:58</td>   <td>3405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.verifyLeaveListTest()[pri:3, instance:com.qa.tests.LeavePageTest@653222]">verifyLeaveListTest</td> 
+  <td>main@16218088</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/12/29 20:43:58</td>   <td>3356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.verifyLeavePageURLTest()[pri:2, instance:com.qa.tests.LeavePageTest@653222]">verifyLeavePageURLTest</td> 
+  <td>main@16218088</td>   <td></td> </tr>
 </table>
