--- a/OrangeHRM/test-output/old/Default suite/classes.html
+++ b/OrangeHRM/test-output/old/Default suite/classes.html
@@ -4,41 +4,41 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.tests.HomePageTest</td>
+<td>com.qa.tests.LeavePageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyHomePageTitleTest</td>
+<td>verifyLeaveListTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAdminLinkTest</td>
+<td>clickLeaveTabTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyWelcomeLabelTest</td>
+<td>verifyLeavePageURLTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>def</td>
+<td>&nbsp;</td></tr>
 </table>
