--- a/OrangeHRM/test-output/old/Suite/methods-alphabetical.html
+++ b/OrangeHRM/test-output/old/Suite/methods-alphabetical.html
@@ -1,64 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:41:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminPageTest.clickAddBtnTest()[pri:2, instance:com.qa.tests.AdminPageTest@11161c7]">clickAddBtnTest</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/20 11:40:04</td>   <td>-105132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.qa.tests.LoginPageTest@3a8624]">loginPageTitleTest</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/20 11:40:14</td>   <td>-94688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:2, instance:com.qa.tests.LoginPageTest@3a8624]">loginTest</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/20 11:39:53</td>   <td>-115880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@3a8624]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/20 11:40:05</td>   <td>-104347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@3a8624]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:40:17</td>   <td>-91670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:40:30</td>   <td>-79248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:40:59</td>   <td>-50512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.tests.HomePageTest@3bd550]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:41:15</td>   <td>-34092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminPageTest.setUp()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:41:33</td>   <td>-16016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminPageTest.setUp()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:41:59</td>   <td>9748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminPageTest.setUp()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:42:26</td>   <td>37346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminPageTest.setUp()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:42:56</td>   <td>66424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminPageTest.setUp()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/20 11:40:04</td>   <td>-105066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@3a8624]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/20 11:40:17</td>   <td>-92391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@3a8624]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:40:29</td>   <td>-80013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:40:57</td>   <td>-51609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:41:14</td>   <td>-34857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.tests.HomePageTest@3bd550]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:41:32</td>   <td>-16736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminPageTest.tearDown()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:41:56</td>   <td>6525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminPageTest.tearDown()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:42:25</td>   <td>36181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminPageTest.tearDown()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:42:55</td>   <td>65711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminPageTest.tearDown()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:43:17</td>   <td>87804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AdminPageTest.tearDown()[pri:0, instance:com.qa.tests.AdminPageTest@11161c7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:42:15</td>   <td>25795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminPageTest.validateCreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:com.qa.tests.AdminPageTest@11161c7]">validateCreateNewUser</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:42:45</td>   <td>55846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminPageTest.validateCreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:com.qa.tests.AdminPageTest@11161c7]">validateCreateNewUser</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:43:08</td>   <td>78939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminPageTest.validateCreateNewUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:com.qa.tests.AdminPageTest@11161c7]">validateCreateNewUser</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:41:11</td>   <td>-37896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyAdminLinkTest()[pri:3, instance:com.qa.tests.HomePageTest@3bd550]">verifyAdminLinkTest</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>19/10/20 11:41:32</td>   <td>-16767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminPageTest.verifyAdminPageURLTest()[pri:1, instance:com.qa.tests.AdminPageTest@11161c7]">verifyAdminPageURLTest</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:40:29</td>   <td>-80063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:1, instance:com.qa.tests.HomePageTest@3bd550]">verifyHomePageTitleTest</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/10/20 11:40:41</td>   <td>-67721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyWelcomeLabelTest()[pri:2, instance:com.qa.tests.HomePageTest@3bd550]">verifyWelcomeLabelTest</td> 
-  <td>main@12186738</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/12/25 19:12:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LeavePageTest.def()[pri:0, instance:com.qa.tests.LeavePageTest@3a8624]">&lt;&lt;def</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/12/25 19:12:16</td>   <td>-32902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.qa.tests.LoginPageTest@1ce4f0a]">loginPageTitleTest</td> 
+  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/12/25 19:12:16</td>   <td>-32857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:2, instance:com.qa.tests.LoginPageTest@1ce4f0a]">loginTest</td> 
+  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/12/25 19:12:05</td>   <td>-44345</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.tests.LoginPageTest@1ce4f0a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/12/25 19:12:20</td>   <td>-28552</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LeavePageTest.setUp()[pri:0, instance:com.qa.tests.LeavePageTest@3a8624]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/12/25 19:12:19</td>   <td>-30177</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.tests.LoginPageTest@1ce4f0a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/12/25 19:12:19</td>   <td>-30194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.testM()[pri:3, instance:com.qa.tests.LoginPageTest@1ce4f0a]">testM</td> 
+  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/12/25 19:12:33</td>   <td>-15869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.verifyLeaveListTest()[pri:2, instance:com.qa.tests.LeavePageTest@3a8624]">verifyLeaveListTest</td> 
+  <td>main@3768023</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>19/12/25 19:12:31</td>   <td>-17585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LeavePageTest.verifyLeavePageURLTest()[pri:1, instance:com.qa.tests.LeavePageTest@3a8624]">verifyLeavePageURLTest</td> 
+  <td>main@3768023</td>   <td></td> </tr>
 </table>
